# Mimic

./: .env.example  .gitignore  README.md  audio_monitor.py  monitor.py  pyproject.toml
