[tool.poetry]
name = "mimic"
version = "0.1.0"
description = ""
authors = ["arcticfly <davidlcorbitt@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyaudio = "^0.2.14"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
